--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
+
   <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
 
     <script src="">
@@ -39,6 +38,9 @@
         })
     }
     </script>
+
+
+<script src="app.js" defer></script>
     <title>Controle de iluminação</title>
 </head>
 <body>
