--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-<script src="app.js" defer></script>
     <title>Controle de iluminação</title>
 </head>
 <body>
@@ -48,7 +46,7 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
 
-  <script src="">
+  <script>
       const firebaseConfig = {
           apiKey: "AIzaSyAD-sDFj__5UcpWyxXU-VuxgqFK3XtVwC8",
           authDomain: "controle-iluminacao.firebaseapp.com",
@@ -76,5 +74,7 @@
   }
   </script>
 
+
+<script src="app.js" defer></script>
 </html>
 
